oci-terraform-solutions/oke-ingress-path-based-routing/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  # The rewrite-target annotation is important for NGINX controllers.
  # It strips the path prefix before forwarding the request to the backend service.
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-webapp-service
            port:
              number: 80
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: node-webapp-service
            port:
              number: 80
